--- a/TREC/src/main/resources/application.properties
+++ b/TREC/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.mustache.suffix=.html
 logging.level.org.springframework.web=DEBUG
+
+server.port = 8443
+server.ssl.key-store = classpath:keystore.jks
+server.ssl.key-store-password = password
+server.ssl.key-password = secret
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
