--- a/TREC/src/main/resources/application.properties
+++ b/TREC/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.mustache.suffix=.html
 logging.level.org.springframework.web=DEBUG
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:mysql://localhost/posts?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=create-drop
