--- a/TREC/src/main/resources/application.properties
+++ b/TREC/src/main/resources/application.properties
@@ -5,3 +5,13 @@ spring.datasource.url=jdbc:mysql://localhost/posts?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create-drop
+
+server.port = 8443
+server.ssl.key-store = classpath:keystore.jks
+server.ssl.key-store-password = password
+server.ssl.key-password = secret
+
+logging.level.org.springframework.security=DEBUG
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
