Created page to show purchases.
- Created page to show purchases.
- Some typo bugs fixed.
- Many static URLs fixed.

--- a/TREC/src/main/resources/application.properties
+++ b/TREC/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.mustache.suffix=.html
 logging.level.org.springframework.web=DEBUG
 
-spring.datasource.url=jdbc:mysql://localhost/posts?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost/trec?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create-drop
