--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -52,6 +52,11 @@
  			<artifactId>jjwt</artifactId>
  			<version>0.7.0</version>
 		</dependency>
+		<dependency>
+ 			<groupId>org.springdoc</groupId>
+ 			<artifactId>springdoc-openapi-ui</artifactId>
+ 			<version>1.5.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
