--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,6 +4,8 @@ logging.level.org.springframework.web=DEBUG
 spring.datasource.url=jdbc:mysql://localhost/trec?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=create-drop
 
 server.port = 8443
