--- a/frontend/sample-project-phase4/angular.json
+++ b/frontend/sample-project-phase4/angular.json
@@ -27,9 +27,16 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "src/assets/js/main.js",
+              "src/assets/js/profile.js"
+            ]
           },
           "configurations": {
             "production": {
