--- a/frontend/sample-project-phase4/package.json
+++ b/frontend/sample-project-phase4/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.3",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
