--- a/frontend/sample-project-phase4/angular.json
+++ b/frontend/sample-project-phase4/angular.json
@@ -28,12 +28,24 @@
             ],
             "styles": [
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/assets/css/jquery.timepicker.css",
+              "src/assets/css/owl.carousel.min.css",
+              "src/assets/css/owl.theme.default.min.css",
+              "src/assets/css/bootstrap.min.css",
+              "src/assets/css/bootstrap-datepicker.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "src/assets/js/jquery-migrate-3.0.1.min.js",
+              "src/assets/js/jquery.animateNumber.min.js",
+              "src/assets/js/jquery.easing.1.3.js",
+              "src/assets/js/jquery.magnific-popup.min.js",
+              "src/assets/js/jquery.stellar.min.js",
+              "src/assets/js/jquery.timepicker.min.js",
+              "src/assets/js/jquery.waypoints.min.js",
+              "src/assets/js/scrollax.min.js",
+              "src/assets/js/owl.carousel.min.js",
+              "src/assets/js/bootstrap.min.js",
               "src/assets/js/main.js",
               "src/assets/js/profile.js"
             ]
@@ -92,7 +104,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "assets": [
+            "src/assets": [
               "src/favicon.ico",
               "src/assets"
             ],
