--- a/frontend/sample-project-phase4/package.json
+++ b/frontend/sample-project-phase4/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ejem0",
+  "name": "trec",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.3",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -43,5 +44,15 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.2"
-  }
+  },
+  "styles": [
+    "node_modules/@fortawesome/fontawesome-free/css/all.css",
+    "assets/css/jquery.timepicker.css",
+    "assets/css/owl.carousel.min.css",
+    "assets/css/owl.theme.default.min.css",
+
+    "assets/css/bootstrap.min.css",
+    "assets/css/bootstrap-datepicker.css",
+    "src/styles.css"
+  ]
 }
